Replaced alert with snackbar (#40)

--- a/fstat/templates/base.html
+++ b/fstat/templates/base.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="/static/css/styles.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
   <link rel="stylesheet" href="/static/css/bootstrap-tagsinput.css">
+  <link rel="stylesheet" href="/static/css/snackbar.css">
 {% endblock %}
 
 {% block scripts %}
@@ -58,6 +59,8 @@
   <!-- Include app.js -->
   <script type="text/javascript" src="/static/js/app.js"></script>
 
+  <!-- Include snackbar.js -->
+  <script type="text/javascript" src="/static/js/snackbar.js"></script>
 {% endblock %}
 
 {# Finally, round things out with navigation #}
@@ -88,6 +91,7 @@
   {% endif %}
 </div>
 </div>
+<div id="snackbar"></div>
 <style type="text/css">
   #login.dropdown-menu {
     width: 100%;
