Rework the parser into a more readable code
This also makes some significant changes to our parsing. Ever since we
introduced per-test timeout, the entire job does not get aborted, so
I removed that logic. I've also changed how we store failures in the
code. Rather than a per-Jenkins job, I'm introducing a per-Jenkins job
tag which tags a particular failure as timeout/failure.

--- a/fstat/templates/index.html
+++ b/fstat/templates/index.html
@@ -49,13 +49,13 @@
         {% for failure in failures %}
         <tr>
           <td>
-            {% if failure["state"] == 3 %}
-              <div class="tag tag-warning">
-                <span class="glyphicon glyphicon-remove"></span>
-              </div>
-            {% elif failure["state"] == 2 %}
+            {% if failure["type"] == 1 %}
               <div class="tag tag-danger">
                 <span class="glyphicon glyphicon-fire"></span>
+              </div>
+            {% elif failure["type"] == 2 %}
+              <div class="tag tag-warning">
+                <span class="glyphicon glyphicon-time"></span>
               </div>
             {% endif %}
           </td>
