--- a/fstat/templates/index.html
+++ b/fstat/templates/index.html
@@ -62,7 +62,7 @@
               </div>
             {% endif %}
           </td>
-          <td><a href="http://git.gluster.org/cgit/glusterfs.git/tree/{{ failure["signature"] }}" target="_blank"><code>{{ failure["signature"] }}</code></a></td>
+          <td><a href="https://github.com/gluster/glusterfs/tree/devel/{{ failure["signature"] }}" target="_blank"><code>{{ failure["signature"] }}</code></a></td>
           <td><a href="{{ url_for('instance_summary', start_date=start_date, end_date=request.args.get('end_date'), fid=failure['id'], state=failure['state'],branch=request.args.get('branch', 'all')) }}">{{ failure["failure_count"] }}</a></td>
           <td>
             {% for bug in failure["bugs"] %}
